--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "ejs": "^3.1.10",
+    "mongoose": "^8.8.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
