--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT=3010
 MONGO_URL=mongodb://localhost:27017/nest
 
+EMAIL_ADMIN=admin999@gmail.com
+ROLE_ADMIN=admin
+
 JWT_ACCESS_TOKEN_SECRET=123123
 JWT_ACCESS_EXPIRATION=20h
 
