Nest Lifecycle event

--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@ PORT=3010
 MONGO_URL=mongodb://localhost:27017/nest
 
 EMAIL_ADMIN=admin999@gmail.com
-ROLE_ADMIN=admin
+ROLE_ADMIN=SUPER_ADMIN
+
+SHOULD_INIT=true
+INIT_PASSWORD=999999
 
 JWT_ACCESS_TOKEN_SECRET=123123
 JWT_ACCESS_EXPIRATION=20h
