Send mail with template

--- a/.env
+++ b/.env
@@ -1,10 +1,15 @@
 PORT=3010
 MONGO_URL=mongodb://localhost:27017/nest
 
+EMAIL_HOST=smtp.gmail.com
+EMAIL_SEND=akai.devone@gmail.com
+EMAIL_SEND_PASSWORD=ctdojnsulrbdpmrv
+EMAIL_PREVIEW=false
+
 EMAIL_ADMIN=admin999@gmail.com
 ROLE_ADMIN=SUPER_ADMIN
 
-SHOULD_INIT=true
+SHOULD_INIT=false
 INIT_PASSWORD=999999
 
 JWT_ACCESS_TOKEN_SECRET=123123
