--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -34,8 +35,10 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
-    "mongoose": "^8.8.3",
+    "handlebars": "^4.7.8",
+    "mongoose": "^7.6.1",
     "ms": "^2.1.3",
+    "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -54,6 +57,7 @@
     "@types/ms": "^0.7.34",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
