--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^5.0.1",
     "api-query-params": "^5.4.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "cron": "2.4.3",
     "ejs": "^3.1.10",
     "handlebars": "^4.7.8",
     "mongoose": "^7.6.1",
