--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cron": "2.4.3",
     "ejs": "^3.1.10",
     "handlebars": "^4.7.8",
+    "helmet": "^8.0.0",
     "mongoose": "^7.6.1",
     "ms": "^2.1.3",
     "nodemailer": "^6.10.0",
