Giới hạn số lần gọi API (Rate Limiting)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "api-query-params": "^5.4.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
